--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.uri=mongodb+srv://frozenfood:frozenfood@cluster.iemeu.mongodb.net/test
+spring.data.mongodb.database=frozen_food
