--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.data.mongodb.host= localhost
 spring.data.mongodb.port= 27017
 spring.data.mongodb.database= FrozenFood
 
-#spring.data.mongodb.uri=mongodb+srv://frozenfood:frozenfood@cluster.iemeu.mongodb.net/test
+#spring.data.mongodb.uri= mongodb+srv://ffjorgemiguel:ffjorgemiguel@cluster.iemeu.mongodb.net/test
 #spring.data.mongodb.database=frozen_food
