--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.12.3</version>
 		</dependency>
     </dependencies>
 
